[gd_scene load_steps=11 format=3 uid="uid://ckbcvhm6g4thr"]

[ext_resource type="PackedScene" uid="uid://bro8eh1sqle7q" path="res://UI/Bulletins/PlayerMenus/player_menu_base.tscn" id="1_83pc8"]
[ext_resource type="Script" path="res://UI/Bulletins/PlayerMenus/cooking_menu.gd" id="2_fdv61"]
[ext_resource type="PackedScene" uid="uid://txw4c7b7vivl" path="res://UI/CustomNodes/inventory_slot.tscn" id="2_qo4ie"]
[ext_resource type="Script" path="res://UI/CustomNodes/start_cooking_slot.gd" id="3_8834u"]
[ext_resource type="Texture2D" uid="uid://x6qo4tct8406" path="res://Assets/textures/square32.png" id="3_u6lkr"]
[ext_resource type="Script" path="res://UI/CustomNodes/final_cooking_slot.gd" id="5_k3l6u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cminc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pfajf"]
bg_color = Color(0, 0, 0, 0.235294)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cucus"]
bg_color = Color(0, 0, 0, 0.352941)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0jd26"]
bg_color = Color(0.32549, 0.32549, 0.32549, 1)

[node name="CookingMenu" instance=ExtResource("1_83pc8")]
script = ExtResource("2_fdv61")

[node name="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/UtilityNinePatchRect/MarginContainer/VBoxContainer/NinePatchRect" index="0"]
text = "Cooking"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/UtilityNinePatchRect/MarginContainer/VBoxContainer" index="1"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/UtilityNinePatchRect/MarginContainer/VBoxContainer/CenterContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/UtilityNinePatchRect/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="StartCookingSlot" parent="MarginContainer/HBoxContainer/VBoxContainer/UtilityNinePatchRect/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer" index="0" instance=ExtResource("2_qo4ie")]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("3_8834u")

[node name="CookingProgressBar" type="TextureProgressBar" parent="MarginContainer/HBoxContainer/VBoxContainer/UtilityNinePatchRect/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 48)
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.005
nine_patch_stretch = true
texture_under = ExtResource("3_u6lkr")
texture_progress = ExtResource("3_u6lkr")
tint_under = Color(0.412176, 0.300452, 0.184988, 1)
tint_progress = Color(0.803922, 0.509804, 0, 1)

[node name="FinalCookingSlot" parent="MarginContainer/HBoxContainer/VBoxContainer/UtilityNinePatchRect/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer" index="2" instance=ExtResource("2_qo4ie")]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("5_k3l6u")

[node name="CookButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/UtilityNinePatchRect/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(196, 64)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxEmpty_cminc")
theme_override_styles/hover = SubResource("StyleBoxFlat_pfajf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cucus")
theme_override_styles/disabled = SubResource("StyleBoxFlat_0jd26")
disabled = true
text = "Cook"
